--- a/spec/config/test1.yml
+++ b/spec/config/test1.yml
@@ -1,5 +1,6 @@
 ---
 username: username1@recurly.com
-site: https://site1.recurly.com
 password: asdf4jk31
+subdomain: site1
 private_key: asdfasdfasdf
+environment: :production
