Don't support JRuby Nokogiri in Travis CI
This should not be considered a failure. Happy to accept patches,
though.

Also making some notification settings changes.

Signed-off-by: Stephen Celis <stephen@stephencelis.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,13 @@ rvm:
 env:
   - XML=rexml
   - XML=nokogiri
+matrix:
+  allow_failures:
+    - rvm: jruby-18mode
+      env: XML=nokogiri
+    - rvm: jruby-19mode
+      env: XML=nokogiri
+notifications:
+  email:
+    recipients:
+      - dev@recurly.com
