Add more rubies to the testing matrix
Remove Gemfile.lock

Rev web mock to fix jruby19 tests

loosen development dependencies

Fix tests mutating global state

Fix mock declarations

Fix jruby nokogiri issues.

Code review response

Move environment initialization to a before hook and rename method for clarity

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,12 @@ cache: bundler
 sudo: false
 rvm:
   - jruby
+  - jruby-9000
   - 1.9.3
   - 2.0.0
   - 2.1.0
+  - 2.2.4
+  - 2.3.0
 env:
   - XML=rexml
   - XML=nokogiri
