Ban nokogiri on older rubies
- Bumping nokogiri to 1.7.1
- Deprecating ruby 1.9 and 2.0 and only allowing rexml use on those versions
- Conditionally install nokogiri development dependency (for ruby >= 2.1)
- Allow failures in Travis for appropriate versions with nokogiri
- Update README with supported version information

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,9 @@ env:
   - XML=nokogiri
 matrix:
   allow_failures:
-    - rvm: jruby-19mode
+    - rvm: 1.9.3
+      env: XML=nokogiri
+    - rvm: 2.0.0
+      env: XML=nokogiri
+    - rvm: jruby
       env: XML=nokogiri
