--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ script:
   - gem build recurly.gemspec
 cache: bundler
 sudo: false
+before_install:
+  - gem update bundler
 rvm:
-  - jruby
+  - jruby-9.1.9.0
   - jruby-9000
   - 1.9.3
   - 2.0.0
