No longer need bundler 1.7
Bundler 2 now works

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
   - 2.6
 bundler_args: --binstubs
 before_install:
-  - gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
-  - gem install bundler -v '< 2'
+  - gem update --system
+  - gem install bundler
 script:
   - ./scripts/test
