--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,21 +1,12 @@
 [bumpversion]
-current_version = 3.0.0.beta.6
+current_version = 3.0.0
 parse = (?P<major>\d+)
-        \.(?P<minor>\d+)
-        \.(?P<patch>\d+)
-        (\.(?P<release>[a-z]+)\.(?P<build>\d+))?
-
+	\.(?P<minor>\d+)
+	\.(?P<patch>\d+)
 serialize = 
-	{major}.{minor}.{patch}.{release}.{build}
 	{major}.{minor}.{patch}
-
-[bumpversion:part:release]
-values = 
-	beta
 
 [bumpversion:part:build]
 
 [bumpversion:file:lib/recurly/version.rb]
-
-[bumpversion:file:docs/README.md]
 
