--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script:
 cache: bundler
 sudo: false
 before_install:
-  - gem update --system
+  - yes | gem update --system
   - gem update bundler
 rvm:
   - jruby-9.1
