Let bump2version manage the getting started doc

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -10,3 +10,7 @@ serialize =
 
 [bumpversion:file:lib/recurly/version.rb]
 
+[bumpversion:file:GETTING_STARTED.md]
+parse = (?P<major>\d+)\.(?P<minor>\d+)
+serialize = {major}.{minor}
+
