--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ before_install:
   - sudo apt-get update && sudo apt-get install apt-transport-https ca-certificates -y && sudo update-ca-certificates
   - gem update --system
   - gem install bundler
+dist: focal
 script:
   - ./scripts/test
